# cmake_vcpkg

./: CMakeLists.txt  LICENSE  Pipfile  README.md
CMake/Toolchains/: 386-windows.cmake  amd64-linux.cmake  amd64-windows.cmake
CMake/Triplets/: 386-windows.cmake  amd64-linux.cmake  amd64-windows.cmake
_vcpkg/: add_package.py  applocal.py
